--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <link href="./style.css" type="text/css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap" rel="stylesheet"> 
+        <meta charset="utf-8">
+        <title>Caitlin's #a11yTO Resources</title>
+    </head>
+    <body>
+      <h1>Caitlin's #a11yTO Resources</h1>
+      <ul>
+        <li><a href="https://docs.google.com/presentation/d/1HpEWJlTgYgVPgNEWqK9tl_GlYgbayGX5fLoN3Wghquo/edit?usp=sharing">Accessibility for Content Creators Slides</a></li>
+        <li><a href="https://www.deque.com/blog/accessibility-strategies-for-your-content-team/">"Accessibility Strategies for Your Content Team" - Deque.com Blog Post</a></li>
+        <li><a href="https://www.deque.com/blog/seo-and-accessibility-real-talk/">"SEO and Accessibility: Real Talk" - Deque.com Blog Post</a></li>
+        <li><a href="https://twitter.com/caitlinthefirst">Follow Caitlin on Twitter!</a></li>
+      </ul>
+      
+  </body>
+</html>
+    
